- linea stubs
- SetScrren() in xbios.c
- some malloc debug info.
- added missing util directory (MAD)
- changed sysvarend to _bssend (it is the BSS, that ends! - got from DRI)
- added end.s with _bssend 

08. Oct. 2001
- started iorec and kbdvbase stuff (aim is to reimplement kbd.c to
  be compliant with the way TOS does it)
- some debug info in Malloc(), bios(5)
<<<<<<< changelog.txt
- cleaned Makefile and end.s ("the end.s episode")

09. Oct. 2001
- Got asm conout working - MiNT did run somewhat better (MAD)
- Includes some more needed lineavars initialized (_esc_init) (MAD)
- cleaned Makefile and end.s ("the end.s episode") (LVL)
- copy paste error in linea stubs, startup.s (LVL)

10. Oct. 2001
- EmuTOS now expects a cartridge of type 3, just as the original TOS. (THO)

11. Oct. 2001
- removed the cart directory and the cartridge - no longer needed (MAD)

12. Oct. 2001
- Initialised linea from startup.s (_esc_init -> _linea_init) (MAD)
- Cleaned up conio.c
- Cleaned up output stuff in bios.c
- Put all linea stuff in bios/linea.s
- Cleaned up some minor things in bdos/proc.c
- Changed linea/graphics init in bios/startup.s
- Set up half of memory config in bios/startup.s
- pseudo reentrant bios xbios trap handler (LVL)
- Supexec() (LVL)
- bios device functions arrays (bconstat_vec, ...) (LVL)

13. Oct. 2001
- Fixed some minor errors while compilation (MAD)
- Added more system vars in tosvars.s and fixed an error (no pun_ptr) (MAD)

14. Oct. 2001
- implemented full memory configuration - much much more memory now (MAD)
- implemented cursor (not blinking - this was easy) 
- Changed version string of command.prg
- correct fnt8x8 (previous one useless) and fnt8x16 (last char offset) (LVL)
- some progress on iorec, but still not in service (LVL)

16. Oct. 2001
- Fixed some bugs in bios.c (the bconoutx functions need 2 parameters!) (THO)

19. Oct. 2001
- Cleaned up and seperated memory initialisation in memory.s
- Cleaned up command.prg (got rid of cpm code)