@@ -131,6 +131,51 @@ static BYTE ascii_caps [] = {
     0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00
 };
 
+
+
+/*==== Scancode table control (not yet implemented) =======================*/
+static BYTE ascii_ctrl [] = {
+    0x00, 0x00, 0x00, 0x00, 0x1b, 0x1c, 0x1d, 0x1e,
+    0x1f, 0x7f, 0x00, 0x00, 0x7f, 0x00, 0x08, 0x00,
+    0x11, 0x17, 0x05, 0x12, 0x14, 0x19, 0x15, 0x09,
+    0x0f, 0x10, 0x1b, 0x1d, 0x01, 0x02, 0x01, 0x13,
+    0x04, 0x06, 0x07, 0x08, 0x0a, 0x0b, 0x0c, 0x00,
+    0x07, 0x00, 0x00, 0x1c, 0x1a, 0x18, 0x03, 0x16,
+    0x02, 0x0e, 0x0d, 0x00, 0x00, 0x7f, 0x00, 0x00,
+    0x03, 0x00, 0x07, 0x00, 0x01, 0x02, 0x03, 0x04,
+    0x05, 0x06, 0x07, 0x08, 0x09, 0x00, 0x00, 0x14,
+    0x03, 0x00, 0x0b, 0x01, 0x00, 0x02, 0x0a, 0x00,
+    0x00, 0x00, 0x15, 0x7f, 0x00, 0x00, 0x00, 0x00,
+    0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
+    0x00, 0xff, 0x02, 0x12, 0x13, 0x0d, 0x0c, 0x07,
+    0x08, 0x09, 0x04, 0x05, 0x06, 0x01, 0x02, 0x03,
+    0x00, 0x10, 0x0e, 0x00, 0x00, 0x00, 0x00, 0x00,
+    0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00
+};
+
+
+
+/*==== Scancode table alt (not yet implemented) ===========================*/
+static BYTE ascii_alt [] = {
+    0x00, 0x1b, 0x31, 0x32, 0x33, 0x34, 0x35, 0x36,
+    0x37, 0x38, 0x39, 0x30, 0x9e, 0x27, 0x08, 0x09,
+    0x71, 0x77, 0x65, 0x72, 0x74, 0x7a, 0x75, 0x69,
+    0x6f, 0x70, 0x81, 0x2b, 0x0d, 0x00, 0x61, 0x73,
+    0x64, 0x66, 0x67, 0x68, 0x6a, 0x6b, 0x6c, 0x94,
+    0x84, 0x23, 0x00, 0x7e, 0x79, 0x78, 0x63, 0x76,
+    0x62, 0x6e, 0x6d, 0x2c, 0x2e, 0x2d, 0x00, 0x00,
+    0x00, 0x20, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
+    0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
+    0x00, 0x00, 0x2d, 0x00, 0x00, 0x00, 0x2b, 0x00,
+    0x00, 0x00, 0x00, 0x7f, 0x00, 0x00, 0x00, 0x00,
+    0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
+    0x3c, 0x00, 0x00, 0x28, 0x29, 0x2f, 0x2a, 0x37,
+    0x38, 0x39, 0x34, 0x35, 0x36, 0x31, 0x32, 0x33,
+    0x30, 0x2e, 0x0d, 0x00, 0x00, 0x00, 0x00, 0x00,
+    0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00
+};
+
+
 /*=== Keymaps handling (xbios) =======================================*/
 
 static struct {
